--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ black = "22.3.0"
 ipykernel = "6.7.0"
 isort = "5.10.1"
 pylint = "2.12.2"
+pytest = "^7.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -26,5 +27,5 @@ build-backend = "poetry.core.masonry.api"
 profile = "black"
 
 [tool.pylint.messages_control]
-disable = ["C", "R", "unspecified-encoding", "abstract-method"]
+disable = ["C", "R", "unspecified-encoding", "abstract-method", "protected-access"]
 generated-members = ["torch"]
